# veriloglib

./: CHANGELOG.md  CMakeLists.txt  README.md
doc/: verilog_subset.bnf
include/: verilog_actions.hpp  verilog_grammar.hpp  veriloglib.hpp
src/: main.cpp  src  veriloglib.cpp
tests/: test_verilog.cpp
